--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,13 @@ pillow==11.1.0
 pip==25.0.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-pytz2025.1
+python-dotenv==1.0.1
 scikit-learn==1.6.0
 scipy==1.15.2
 seaborn==0.13.2
 six==1.17.0
 threadpoolctl==3.6.0
 tzdata==2025.1
+waitress==3.0.2
 Werkzeug==3.1.3
-python-dotenv==1.0.1
+pytz==2025.1
